integration_tests/codegen_fail/fail/scalar/impl_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/impl_invalid_url.rs:5:22
  |
5 | #[graphql_scalar(specified_by_url = "not an url")]
  |                  ^^^^^^^^^^^^^^^^
